Actions
Bug #8294
closedauditd: case values not in enum
Start date:
2017-05-28
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build error from gcc 6:
doorway.c:186:2: error: case value '4294967293' not in enumerated type 'auditd_rc_t {aka enum auditd_rc}' [-Werror=switch] case INTERNAL_CONFIG_ERROR: ^~~~ doorway.c:181:2: error: case value '4294967294' not in enumerated type 'auditd_rc_t {aka enum auditd_rc}' [-Werror=switch] case INTERNAL_SYS_ERROR: ^~~~ doorway.c:176:2: error: case value '4294967295' not in enumerated type 'auditd_rc_t {aka enum auditd_rc}' [-Werror=switch] case INTERNAL_LOAD_ERROR: ^~~~ cc1: all warnings being treated as errors
Updated by Electric Monk about 5 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 50f7888b60b9fee4c775b56966f02e23da2deef5
commit 50f7888b60b9fee4c775b56966f02e23da2deef5 Author: Toomas Soome <tsoome@me.com> Date: 2017-06-02T17:49:39.000Z 8294 auditd: case values not in enum Reviewed by: Yuri Pankov <yuripv@gmx.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Richard Lowe <richlowe@richlowe.net>
Actions